# pybind11_example

./: README.md  example_env.yml  setup.py
include/: softmax.h
other_examples/proj1/: CMakeLists.txt  README.md  setup.py
other_examples/proj1/glacial/: __init__.py
other_examples/proj1/include/: proj1.h
other_examples/proj1/pyproj1/: __init__.py
other_examples/proj1/src/: add.cpp  multiply.cpp
other_examples/proj1/src_py/: module.cpp
other_examples/proj2/: CMakeLists.txt  README.md  setup.py  test_pyproj2.py
other_examples/proj2/include/: proj2.h
other_examples/proj2/src/: vsq.cpp
other_examples/proj2/src_py/: module.cpp
other_examples/proj3/: CMakeLists.txt  README.md  makefile  setup.py  test_pyproj3.py
other_examples/proj3/include/: proj3.cuh  proj3.h
other_examples/proj3/pyproj3/: __init__.py
other_examples/proj3/src/: cuda_buffer.cu  module.cpp  transvsq.cu  vsq.cu
softmax/: __init__.py  pyfunc.py
src/: echo_args.cpp  module.cpp  params.cpp  softmax.cpp  utils.cpp
tests/: test.py
